--- a/public/index.html
+++ b/public/index.html
@@ -2,33 +2,17 @@
 <html>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="semantic/semantic.min.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css"></link>
+  <!-- <link rel="stylesheet" type="text/css" href="semantic/semantic.min.css">
   <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
-  <script src="semantic/semantic.min.js"></script>
+  <script src="semantic/semantic.min.js"></script> -->
 </head>
 
 <body>
-  <!--Header-->
 
-  
-  <!--SideBar-->
-  <div class="ui left demo vertical inverted sidebar labeled icon menu">
-    <a class="item">
-      <i class="home icon"></i>
-      Home
-    </a>
-    <a class="item">
-      <i class="block layout icon"></i>
-      Topics
-    </a>
-    <a class="item">
-      <i class="smile icon"></i>
-      Friends
-    </a>
-  </div>
 
 
   <div id="root"></div>
