--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,8 @@
 
 <head>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css"></link>
-  <!-- <link rel="stylesheet" type="text/css" href="semantic/semantic.min.css">
-  <script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
-  <script src="semantic/semantic.min.js"></script> -->
+  <link rel="stylesheet" href="./webix.css"></link>
+  <script src="./webix.js"></script>
 </head>
 
 <body>
