--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css"></link>
-  <link rel="stylesheet" href="./webix.css"></link>
-  <script src="./webix.js"></script>
+   <link rel="stylesheet" href="./webix.css"></link>
+  <script src="/webix.js"></script> 
 </head>
 
 <body>
@@ -12,7 +12,7 @@
 
 
   <div id="root"></div>
-  <script src="bundle.js"></script>
+  <script src="/bundle.js"></script>
 </body>
 
 </html>
